[package]
name = "test-each-codegen"
description = "Internal proc-macro crate for `test-each`"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full"] }
glob = "0.3.1"
proc-macro2 = "1.0.86"
